# learning-rust

./: Cargo.toml  Makefile  readme.md
chapters/01_getting_started/: 0_getting_started.md
chapters/02_programming_a_guessing_game/: 0_programming_a_guessing_game.md  readme.md
chapters/03_common_programming_concepts/: 0_common_programming_concepts.md  1_variables_and_mutability.md  2_data_types.md  3_functions.md  4_comments.md  5_control_flow.md  readme.md
chapters/04_understanding_ownership/: 0_understanding_ownership.md  1_what_is_ownership.md  2_references_and_borrowing.md  3_the_slice_type.md
chapters/05_using_structs_to_structure_related_data/: 0_using_structs_to_structure_related_data.md  1_defining_and_instantiating_structs.md  2_an_example_program_using_structs.md  3_method_syntax.md
chapters/06_enums_and_pattern_matching/: 0_enums_and_pattern_matching.md  1_defining_an_enum.md  2_the_match_control_flow_construct.md  3_consice_control_flow_with_if_let.md
chapters/07_managing_growing_projects/: 0_managing_growing_projects.md  1_packages_and_crates.md  2_defining_modules_to_control_scope_and_privacy.md  3_paths_for_referring_to_an_item_in_the_module_tree.md  4_bringing_paths_into_scope_with_the_use_keyword.md  5_separating_modules_into_different_files.md
chapters/08_common_collections/: 0_common_colletions.md  1_storing_lists_of_values_with_vectors.md  2_storing_utf_8_encoded_text_with_strings.md  3_storing_keys_with_associated_values_in_hash_maps.md
chapters/09_error_handling/: 0_error_handling.md  1_unrecoverable_errors_with_panic.md  (+1 more)
(+14 files in other folders)
